--- a/styles/index.css
+++ b/styles/index.css
@@ -5,7 +5,7 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.warning{
+.wrapper__login-error{
     color: red;
 }
 body{
@@ -44,7 +44,32 @@ body{
     background-image: url(../img/loginImage.jpg);
     width: 50%;
 }
+.wrapper__login-form-button{
+    padding: 10px;
+    color: black;
+    border-radius: 30px;
+    font-size: 18px;
+    border: 0px;
+}
 
-h1{
-    margin-bottom: 10%;
+.wrapper__login-form{
+    font-size:20px;
+    margin: 20px;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.wrapper__login-form-input{
+    width: 100%;
+}
+
+.wrapper__login-form-buttons{
+    margin-top: 30px;
+    display: flex;
+    justify-content: space-between;
+}
+
+input[value="Iniciar Sesion"]{
+    background-color: #00CED1;
 }
