--- a/styles/index.css
+++ b/styles/index.css
@@ -62,14 +62,12 @@ body{
 
 .wrapper__login-form-input{
     width: 100%;
+    color: black;
+    font-size: 20px;
 }
 
 .wrapper__login-form-buttons{
     margin-top: 30px;
     display: flex;
     justify-content: space-between;
-}
-
-input[value="Iniciar Sesion"]{
-    background-color: #00CED1;
 }
