--- a/styles/menu.css
+++ b/styles/menu.css
@@ -13,6 +13,10 @@
 
 .sidebar__navbar-list-item{
     padding:20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .sidebar{
@@ -54,4 +58,19 @@ a{
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.sidebar__welcome-greet{
+    text-align: center;
+    font-size: 20px;
+}
+
+button, input[type="submit"], input[type="reset"] {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
 }
