--- a/styles/index.css
+++ b/styles/index.css
@@ -69,5 +69,5 @@ body{
 .wrapper__login-form-buttons{
     margin-top: 30px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
