--- a/styles/menu.css
+++ b/styles/menu.css
@@ -12,21 +12,22 @@
 }
 
 .sidebar__navbar-list-item{
-    padding:20px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+    margin-top: 10px;
 }
 
 .sidebar{
     background-color: #1c0d02;
     width: 200px;
     display: flex;
-    height: 100vh;
+    height: 100%;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    position: absolute;
 }
 
 .sidebar__welcome{
@@ -42,17 +43,17 @@
 }
 .sidebar__welcome-profile{
     margin-top: 20px;
-    width: 90px;
+    width: 70px;
 }
 a{
     text-decoration: none;
 }
 .sidebar__navbar-list-item-icon{
-    width:60px;
+    width:55px;
     background-color: white;
     border-radius: 20%;
     padding: 15px;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 .sidebar__navbar-list-link{
     display: flex;
