aplicando estilos para el registro

--- a/styles/registro.css
+++ b/styles/registro.css
@@ -1,3 +1,81 @@
 .registro__input--warning{
     color: red;
 }
+body{
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content:center;
+}
+
+.wrapper__registro{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+}
+
+.wrapper__registro-form{
+    font-size:20px;
+    margin: 10px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.wrapper__registro-form-buttons{
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.wrapper__registro-form-button{
+    padding: 10px;
+    color: black;
+    border-radius: 30px;
+    font-size: 18px;
+    border: 0px;
+}
+
+.wrapper__registro-form-input{
+    width: 100%;
+    color: black;
+    font-size: 20px;
+}
+.wrapper{
+    width: 75%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 60vh;
+    margin: auto;
+    background-color: #1c0d02;
+    box-shadow:
+    0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+    0 12.5px 10px rgba(0, 0, 0, 0.06),
+    0 10.3px 17.9px rgba(0, 0, 0, 0.072),
+    0 20.8px 33.4px rgba(0, 0, 0, 0.086),
+    0 20px 80px rgba(0, 0, 0, 0.12)
+  ;
+}
+
+.volver span, a{
+    color: black;
+}
+
+.wrapper__image{
+    height: 60vh;
+    display: flex;
+    justify-content: center;
+    background-image: url(../img/loginImage.jpg);
+    width: 50%;
+}
+
+*{
+    margin: 0;
+    padding: 0;
+    color: whitesmoke;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
