--- a/styles/menu.css
+++ b/styles/menu.css
@@ -202,3 +202,13 @@ button, input[type="submit"], input[type="reset"] {
 .wrapper__title{
     padding: 10px;
 }
+
+.parcela__panel__header{
+    background-color: #1c0d02;
+    color: white;
+    display:grid;
+    text-align: center;
+    padding: 2vh;
+    grid-template-columns: repeat(5, 1fr);
+    margin: 5px;
+}
