--- a/styles/menu.css
+++ b/styles/menu.css
@@ -414,7 +414,7 @@ hr{
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     text-align: center;
-    padding: 1vh;
+    padding: 1.5vh;
     box-shadow:
     0 2.8px 2.2px rgba(0, 0, 0, 0.034),
     0 4.7px 5.3px rgba(0, 0, 0, 0.048),
@@ -440,4 +440,31 @@ hr{
 
 .table__drones__items{
     height: 35vh;
+}
+
+.form__dron input[type="submit"]{
+    background-color: #1c0d02;
+    padding: 1vh;
+    color: white;
+}
+.form__dron input{
+    margin: 1vh;
+}
+
+.wrapper__nuevo__dron{
+    display: flex;
+    padding: 2vh;
+    box-shadow:
+    0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+    0 4.7px 5.3px rgba(0, 0, 0, 0.048),
+    0 5.5px 6px rgba(0, 0, 0, 0.06),
+    0 6.3px 9.9px rgba(0, 0, 0, 0.072),
+    0 9.8px 14.4px rgba(0, 0, 0, 0.086),
+    0 9px 20px rgba(0, 0, 0, 0.12)
+  ;
+    justify-content:center;
+    align-items:center;
+    flex-direction: column;
+    width: 50%;
+    margin: auto;
 }
